[package]
name = "yolo-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
argh = "0.1"
chrono = "0.4"
anyhow = "1.0"
rayon = "1.10"
image = "0.25"
crossbeam = "0.8"
num_cpus = "1.16"
once_cell = "1.20"
parking_lot = "0.12"
lazy_static = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
reqwest = { version = "0.12", features = ["json", "multipart", "http2"] }
rsmedia = { git = "https://github.com/phial3/rsmedia", branch = "rsmpeg" }
cv-convert = { git = "https://github.com/phial3/cv-convert", branch = "main", features = ["rsmpeg"] }
usls = { git = "https://github.com/phial3/usls", branch = "rsmedia", features = ["ffmpeg"] }
opencv = { version = "0.94", features = [
    "dnn",
    "videoio",
    "highgui",
    "imgproc",
    "imgcodecs",
    "features2d",
    "objdetect",
    "tracking",
    "stitching",
    "clang-runtime",
] }

[dev-dependencies]
time = "0.3"
regex = "1.11"
camino = "1.1"
dashmap = "6.1"
